# mocap

./: .gitignore  README.md  Read_data.py  build_phasespace_ros2.sh
install/: local_setup.sh  setup.sh
install/phasespace_bringup_ros2/lib/phasespace_bringup_ros2/: live_plot_xyz.py  phasespace_bringup_node  read_rigids.py
install/phasespace_bringup_ros2/share/ament_index/resource_index/package_run_dependencies/: phasespace_bringup_ros2
install/phasespace_bringup_ros2/share/ament_index/resource_index/parent_prefix_path/: phasespace_bringup_ros2
install/phasespace_bringup_ros2/share/phasespace_bringup_ros2/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/phasespace_bringup_ros2/share/phasespace_bringup_ros2/cmake/: phasespace_bringup_ros2Config.cmake
install/phasespace_msgs_ros2/include/phasespace_msgs_ros2/phasespace_msgs_ros2/msg/: cameras.hpp  marker.h  markers.h  rigid.h  rigid.hpp  rigids.h  rigids.hpp  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/phasespace_msgs_ros2/include/phasespace_msgs_ros2/phasespace_msgs_ros2/msg/detail/: camera__functions.h  camera__rosidl_typesupport_fastrtps_cpp.hpp  camera__rosidl_typesupport_introspection_c.h  camera__rosidl_typesupport_introspection_cpp.hpp  camera__type_support.c  camera__type_support.h  camera__type_support.hpp  cameras__rosidl_typesupport_introspection_cpp.hpp  cameras__struct.h  cameras__traits.hpp  marker__builder.hpp  marker__functions.c  (+19 more)
install/phasespace_msgs_ros2/share/phasespace_msgs_ros2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/phasespace_msgs_ros2/share/phasespace_msgs_ros2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_phasespace_msgs_ros2__rosidl_generator_cExport.cmake  export_phasespace_msgs_ros2__rosidl_generator_cppExport.cmake  export_phasespace_msgs_ros2__rosidl_generator_pyExport-noconfig.cmake  export_phasespace_msgs_ros2__rosidl_generator_pyExport.cmake  export_phasespace_msgs_ros2__rosidl_typesupport_fastrtps_cppExport.cmake  phasespace_msgs_ros2__rosidl_typesupport_cExport-noconfig.cmake  phasespace_msgs_ros2__rosidl_typesupport_cExport.cmake  phasespace_msgs_ros2__rosidl_typesupport_cppExport-noconfig.cmake  phasespace_msgs_ros2__rosidl_typesupport_introspection_cExport-noconfig.cmake  phasespace_msgs_ros2__rosidl_typesupport_introspection_cExport.cmake  phasespace_msgs_ros2__rosidl_typesupport_introspection_cppExport-noconfig.cmake  phasespace_msgs_ros2__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/phasespace_msgs_ros2/share/phasespace_msgs_ros2/msg/: Camera.idl  Cameras.msg  Markers.msg  Rigid.idl
log/: latest_build
phasespace-mocap-ros2/: README.md
phasespace-mocap-ros2/phasespace_bringup_ros2/: CMakeLists.txt
phasespace-mocap-ros2/phasespace_bringup_ros2/launch/: phasespace_mocap.launch.py
phasespace-mocap-ros2/phasespace_bringup_ros2/scripts/: live_spatial_plot.py  mqtt_publish_markers.py  mqtt_receive_markers.py  plot_xy_data.py  split_markers_devices.py
phasespace-mocap-ros2/phasespace_bringup_ros2/src/: phasespace_bringup_node.cpp
phasespace-mocap-ros2/phasespace_msgs_ros2/: CMakeLists.txt
phasespace-mocap-ros2/phasespace_msgs_ros2/msg/: Camera.msg  Rigids.msg
(+11 files in other folders)
