<?xml version="1.0"?>
<package format="3">
  <name>phasespace_bringup_ros2</name>
  <version>0.0.0</version>
  <description>ROS 2 Phasespace bringup and data publishing nodes.</description>

  <maintainer email="rbccps01@todo.todo">rbccps01</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>phasespace_msgs_ros2</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
